ui: fix contrast issue

--- a/src/main/resources/public/stylesheets/main.scss
+++ b/src/main/resources/public/stylesheets/main.scss
@@ -46,6 +46,10 @@
     }
   }
 
+  .footer-bg-color {
+    background-color: #1d4ed8;
+  }
+
   .mt-icon {
     margin-top: 0.4rem;
   }
